[gd_scene load_steps=4 format=2]

[ext_resource path="res://Worlds/World1/MainCamera.gd" type="Script" id=1]
[ext_resource path="res://Worlds/World1/World1.gd" type="Script" id=2]
[ext_resource path="res://Worlds/World1/LineLayer.gd" type="Script" id=3]

[node name="World1" type="Node2D"]
script = ExtResource( 2 )
map_rect = Rect2( 0, 0, 150, 150 )

[node name="MainCamera" type="Camera2D" parent="."]
position = Vector2( 140, 75 )
current = true
zoom = Vector2( 0.15, 0.15 )
script = ExtResource( 1 )

[node name="Tween" type="Tween" parent="MainCamera"]

[node name="PointLayer" type="Node2D" parent="."]

[node name="LineLayer" type="Node2D" parent="."]
script = ExtResource( 3 )

[node name="LineTimer" type="Timer" parent="LineLayer"]
wait_time = 0.5

[connection signal="timeout" from="LineLayer/LineTimer" to="." method="_on_LineTimer_timeout"]
